compiler/src/test/resources/amyc/nameAnalyzer/failing/ArgumentNumberConstructor.amy
object Args
  abstract class Foo
  case class Bar(i: Int, j: Int) : Foo
  fn foo(i: Int): Foo = { Bar(i, i, i) }
end Args
